# Force3_IA41

./: .gitignore  CMakeLists.txt  Force3_IA41.sln  README.md  main.cpp
Debug/: Force3_IA41.ilk
Force3_IA41/: ArtificialIntelligence.cpp  ArtificialIntelligence.h  Board.cpp  Board.h  Button.cpp  Button.h  Case.cpp  Case.h  ClassDiagram.cd  ClickableComponent.cpp  ClickableComponent.h  Component.cpp  Component.h  Display.cpp  Display.h  Force3_IA41.aps  Force3_IA41.vcxproj  Force3_IA41.vcxproj.filters  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  IAPrologScriptComponent.cpp  IAPrologScriptComponent.h  Main.cpp  MenuScene.cpp  MenuScene.h  Pawn.cpp  Pawn.h  Player.h  PlayerIA.cpp  PlayerIA.h  PlayerPrologScriptComponent.cpp  PlayerPrologScriptComponent.h  PrologHelper.cpp  PrologHelper.h  PrologScriptComponent.cpp  PrologScriptComponent.h  (+7 more)
Force3_IA41/Debug/: vc140.idb
Force3_IA41/Debug/Force3_IA41.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Force3_IA41.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Force3_IA41/Release/Force3_IA41.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Force3_IA41.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Release/: Force3_IA41.iobj  Force3_IA41.ipdb  force3.pl  test.pl
SFML/: CMakeLists.txt
SFML/examples/cocoa/: CMakeLists.txt
SFML/src/SFML/System/: CMakeLists.txt
SFML/src/SFML/Window/: CMakeLists.txt
